--- a/AutoLayoutTutorial/AutoLayoutTutorial/Base.lproj/Main.storyboard
+++ b/AutoLayoutTutorial/AutoLayoutTutorial/Base.lproj/Main.storyboard
@@ -33,10 +33,10 @@
             </objects>
             <point key="canvasLocation" x="585" y="-127"/>
         </scene>
-        <!--View Controller-->
+        <!--Storyboard View Controller-->
         <scene sceneID="hJW-cP-T5U">
             <objects>
-                <viewController storyboardIdentifier="storyboard" id="hCI-fR-hU8" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="storyboard" id="hCI-fR-hU8" customClass="StoryboardViewController" customModule="AutoLayoutTutorial" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Pmf-Sx-LSM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -44,16 +44,33 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XjN-wh-zAx">
                                 <rect key="frame" x="10" y="54" width="355" height="355"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created In Storyboard" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjy-uj-38X">
-                                        <rect key="frame" x="28.333333333333343" y="159.66666666666666" width="298.66666666666663" height="36"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dummy Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjy-uj-38X">
+                                        <rect key="frame" x="92" y="159.66666666666666" width="171" height="36"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
                                         <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IvV-y8-RHR">
+                                        <rect key="frame" x="135.66666666666666" y="247" width="84" height="42"/>
+                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="IvV-y8-RHR" secondAttribute="height" multiplier="2:1" id="O6M-kt-6z2"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                        <state key="normal" title="Hello">
+                                            <color key="titleColor" red="0.03973838314" green="0.36795639990000001" blue="0.58808016780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changeText:" destination="hCI-fR-hU8" eventType="touchUpInside" id="7nj-gC-fVl"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="IvV-y8-RHR" firstAttribute="width" secondItem="IvV-y8-RHR" secondAttribute="height" multiplier="2:1" id="N60-KG-Kgm"/>
+                                    <constraint firstItem="IvV-y8-RHR" firstAttribute="centerX" secondItem="XjN-wh-zAx" secondAttribute="centerX" id="Pdr-xB-JTS"/>
                                     <constraint firstAttribute="width" secondItem="XjN-wh-zAx" secondAttribute="height" multiplier="1:1" id="VLP-5Y-c1R"/>
+                                    <constraint firstItem="IvV-y8-RHR" firstAttribute="top" secondItem="Fjy-uj-38X" secondAttribute="bottom" constant="51.333333333333343" id="XcN-rX-ZDD"/>
                                     <constraint firstItem="Fjy-uj-38X" firstAttribute="centerX" secondItem="XjN-wh-zAx" secondAttribute="centerX" id="YAg-C9-T7G"/>
                                     <constraint firstItem="Fjy-uj-38X" firstAttribute="centerY" secondItem="XjN-wh-zAx" secondAttribute="centerY" id="nIC-n4-mMV"/>
                                 </constraints>
@@ -99,17 +116,7 @@
                                 <exclude reference="zCy-an-Fdv"/>
                             </mask>
                         </variation>
-                        <variation key="heightClass=compact-widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="Yq4-dV-92D"/>
-                                <exclude reference="xhW-RJ-DL5"/>
-                                <exclude reference="DPM-Yn-nZL"/>
-                                <include reference="h0E-Rk-IS8"/>
-                                <exclude reference="s1B-w6-g3K"/>
-                                <include reference="zCy-an-Fdv"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=compact-widthClass=regular">
+                        <variation key="heightClass=compact">
                             <mask key="constraints">
                                 <include reference="Yq4-dV-92D"/>
                                 <exclude reference="xhW-RJ-DL5"/>
@@ -128,6 +135,9 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="Fjy-uj-38X" id="FwC-rT-WcR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A8g-7Y-k8I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
