Updated READ.ME, fixed consraint priority issue

--- a/AutoLayoutTutorial/AutoLayoutTutorial/Base.lproj/Main.storyboard
+++ b/AutoLayoutTutorial/AutoLayoutTutorial/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O04-RT-bRR">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -23,7 +23,7 @@
             <objects>
                 <viewController storyboardIdentifier="buggy" id="BYZ-38-t0r" customClass="BuggyViewController" customModule="AutoLayoutTutorial" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -38,102 +38,72 @@
             <objects>
                 <viewController storyboardIdentifier="storyboard" id="hCI-fR-hU8" customClass="StoryboardViewController" customModule="AutoLayoutTutorial" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Pmf-Sx-LSM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XjN-wh-zAx">
-                                <rect key="frame" x="10" y="54" width="355" height="355"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gLp-5o-BNQ">
+                                <rect key="frame" x="10" y="54" width="394.33333333333331" height="798.33333333333337"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dummy Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjy-uj-38X">
-                                        <rect key="frame" x="92" y="159.66666666666666" width="171" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
-                                        <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IvV-y8-RHR">
-                                        <rect key="frame" x="135.66666666666666" y="247" width="84" height="42"/>
-                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XjN-wh-zAx">
+                                        <rect key="frame" x="0.0" y="0.0" width="394.33333333333331" height="394.33333333333331"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dummy Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjy-uj-38X">
+                                                <rect key="frame" x="111.66666666666669" y="179.33333333333334" width="171" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                                <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IvV-y8-RHR">
+                                                <rect key="frame" x="155.33333333333334" y="266.66666666666669" width="84" height="42"/>
+                                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="IvV-y8-RHR" secondAttribute="height" multiplier="2:1" id="O6M-kt-6z2"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                <state key="normal" title="Hello">
+                                                    <color key="titleColor" red="0.03973838314" green="0.36795639990000001" blue="0.58808016780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="changeText:" destination="hCI-fR-hU8" eventType="touchUpInside" id="7nj-gC-fVl"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="IvV-y8-RHR" secondAttribute="height" multiplier="2:1" id="O6M-kt-6z2"/>
+                                            <constraint firstItem="IvV-y8-RHR" firstAttribute="width" secondItem="IvV-y8-RHR" secondAttribute="height" multiplier="2:1" id="N60-KG-Kgm"/>
+                                            <constraint firstItem="IvV-y8-RHR" firstAttribute="centerX" secondItem="XjN-wh-zAx" secondAttribute="centerX" id="Pdr-xB-JTS"/>
+                                            <constraint firstAttribute="width" secondItem="XjN-wh-zAx" secondAttribute="height" multiplier="1:1" priority="999" id="VLP-5Y-c1R"/>
+                                            <constraint firstItem="IvV-y8-RHR" firstAttribute="top" secondItem="Fjy-uj-38X" secondAttribute="bottom" constant="51.333333333333343" id="XcN-rX-ZDD"/>
+                                            <constraint firstItem="Fjy-uj-38X" firstAttribute="centerX" secondItem="XjN-wh-zAx" secondAttribute="centerX" id="YAg-C9-T7G"/>
+                                            <constraint firstItem="Fjy-uj-38X" firstAttribute="centerY" secondItem="XjN-wh-zAx" secondAttribute="centerY" id="nIC-n4-mMV"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                        <state key="normal" title="Hello">
-                                            <color key="titleColor" red="0.03973838314" green="0.36795639990000001" blue="0.58808016780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="changeText:" destination="hCI-fR-hU8" eventType="touchUpInside" id="7nj-gC-fVl"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="IvV-y8-RHR" firstAttribute="width" secondItem="IvV-y8-RHR" secondAttribute="height" multiplier="2:1" id="N60-KG-Kgm"/>
-                                    <constraint firstItem="IvV-y8-RHR" firstAttribute="centerX" secondItem="XjN-wh-zAx" secondAttribute="centerX" id="Pdr-xB-JTS"/>
-                                    <constraint firstAttribute="width" secondItem="XjN-wh-zAx" secondAttribute="height" multiplier="1:1" id="VLP-5Y-c1R"/>
-                                    <constraint firstItem="IvV-y8-RHR" firstAttribute="top" secondItem="Fjy-uj-38X" secondAttribute="bottom" constant="51.333333333333343" id="XcN-rX-ZDD"/>
-                                    <constraint firstItem="Fjy-uj-38X" firstAttribute="centerX" secondItem="XjN-wh-zAx" secondAttribute="centerX" id="YAg-C9-T7G"/>
-                                    <constraint firstItem="Fjy-uj-38X" firstAttribute="centerY" secondItem="XjN-wh-zAx" secondAttribute="centerY" id="nIC-n4-mMV"/>
-                                </constraints>
-                            </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="z6e-cY-cRp">
-                                <rect key="frame" x="10" y="419" width="355" height="349"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ria-He-Cqn">
-                                        <rect key="frame" x="0.0" y="0.0" width="172.66666666666666" height="349"/>
-                                        <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PGH-W1-7Sg">
-                                        <rect key="frame" x="182.66666666666663" y="0.0" width="172.33333333333337" height="349"/>
-                                        <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="z6e-cY-cRp">
+                                        <rect key="frame" x="0.0" y="404.33333333333326" width="394.33333333333331" height="394"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ria-He-Cqn">
+                                                <rect key="frame" x="0.0" y="0.0" width="192.33333333333334" height="394"/>
+                                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PGH-W1-7Sg">
+                                                <rect key="frame" x="202.33333333333337" y="0.0" width="192" height="394"/>
+                                                <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </view>
+                                        </subviews>
+                                        <variation key="heightClass=compact" axis="vertical"/>
+                                    </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="PGH-W1-7Sg" firstAttribute="width" secondItem="ria-He-Cqn" secondAttribute="width" id="gxE-UB-Siz"/>
-                                    <constraint firstItem="ria-He-Cqn" firstAttribute="height" secondItem="PGH-W1-7Sg" secondAttribute="height" id="tEg-zd-49U"/>
-                                </constraints>
-                                <variation key="heightClass=compact-widthClass=compact" axis="vertical"/>
-                                <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
+                                <variation key="heightClass=compact" axis="horizontal"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="uCQ-c8-5GE" firstAttribute="trailing" secondItem="z6e-cY-cRp" secondAttribute="trailing" constant="10" id="Cq2-Ne-Nhg"/>
-                            <constraint firstItem="z6e-cY-cRp" firstAttribute="leading" secondItem="uCQ-c8-5GE" secondAttribute="leading" constant="10" id="DPM-Yn-nZL"/>
-                            <constraint firstItem="uCQ-c8-5GE" firstAttribute="bottom" secondItem="XjN-wh-zAx" secondAttribute="bottom" constant="10" id="Yq4-dV-92D"/>
-                            <constraint firstItem="XjN-wh-zAx" firstAttribute="top" secondItem="uCQ-c8-5GE" secondAttribute="top" constant="10" id="fej-NV-fCI"/>
-                            <constraint firstItem="z6e-cY-cRp" firstAttribute="top" secondItem="uCQ-c8-5GE" secondAttribute="top" constant="10" id="h0E-Rk-IS8"/>
-                            <constraint firstItem="XjN-wh-zAx" firstAttribute="leading" secondItem="uCQ-c8-5GE" secondAttribute="leading" constant="10" id="hOl-lD-b3J"/>
-                            <constraint firstItem="uCQ-c8-5GE" firstAttribute="bottom" secondItem="z6e-cY-cRp" secondAttribute="bottom" constant="10" id="obC-3R-eHB"/>
-                            <constraint firstItem="z6e-cY-cRp" firstAttribute="top" secondItem="XjN-wh-zAx" secondAttribute="bottom" constant="10" id="s1B-w6-g3K"/>
-                            <constraint firstItem="uCQ-c8-5GE" firstAttribute="trailing" secondItem="XjN-wh-zAx" secondAttribute="trailing" constant="10" id="xhW-RJ-DL5"/>
-                            <constraint firstItem="z6e-cY-cRp" firstAttribute="leading" secondItem="XjN-wh-zAx" secondAttribute="trailing" constant="10" id="zCy-an-Fdv"/>
+                            <constraint firstItem="uCQ-c8-5GE" firstAttribute="bottom" secondItem="gLp-5o-BNQ" secondAttribute="bottom" constant="9.6666666666666288" id="S1s-0U-9Gs"/>
+                            <constraint firstItem="gLp-5o-BNQ" firstAttribute="top" secondItem="uCQ-c8-5GE" secondAttribute="top" constant="10" id="dUb-JB-TCI"/>
+                            <constraint firstItem="gLp-5o-BNQ" firstAttribute="leading" secondItem="uCQ-c8-5GE" secondAttribute="leading" constant="10" id="drT-Ql-IOI"/>
+                            <constraint firstItem="uCQ-c8-5GE" firstAttribute="trailing" secondItem="gLp-5o-BNQ" secondAttribute="trailing" constant="9.6666666666666856" id="zTC-gr-8X2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uCQ-c8-5GE"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Yq4-dV-92D"/>
-                                <exclude reference="h0E-Rk-IS8"/>
-                                <exclude reference="zCy-an-Fdv"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=compact">
-                            <mask key="constraints">
-                                <include reference="Yq4-dV-92D"/>
-                                <exclude reference="xhW-RJ-DL5"/>
-                                <exclude reference="DPM-Yn-nZL"/>
-                                <include reference="h0E-Rk-IS8"/>
-                                <exclude reference="s1B-w6-g3K"/>
-                                <include reference="zCy-an-Fdv"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="constraints">
-                                <exclude reference="Yq4-dV-92D"/>
-                                <include reference="DPM-Yn-nZL"/>
-                                <exclude reference="h0E-Rk-IS8"/>
-                                <exclude reference="zCy-an-Fdv"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="titleLabel" destination="Fjy-uj-38X" id="FwC-rT-WcR"/>
@@ -148,7 +118,7 @@
             <objects>
                 <viewController storyboardIdentifier="programmatic" id="50G-5d-4ka" customClass="AutoLayoutViewController" customModule="AutoLayoutTutorial" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Ef-GD-oU8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="TnM-8A-bxj"/>
